<resources>
	<string name="algorithm">Algorithm</string>
	<string name="analyzer">Analyzer</string>
	<string name="app_name">PRTS</string>
	<string name="back">Back</string>
	<string name="caster">Caster</string>
	<string name="character_preview">Character preview</string>
	<string name="characters">Characters</string>
	<string name="BasicInfo">Basic info</string>
	<string name="Name">Name</string>
	<string name="current_sanity">Current Sanity</string>
	<string name="defender">Defender</string>
	<string name="enemies">Enemies</string>
	<string name="factions">Factions</string>
	<string name="guard">Guard</string>
	<string name="headhunt">Headhunt</string>
	<string name="Image">image</string>
	<string name="info">Info</string>
	<string name="left">Left</string>
	<string name="log_in">Please log in</string>
	<string name="logo">Logo</string>
	<string name="materials">Materials</string>
	<string name="medic">Medic</string>
	<string name="operators">Operators</string>
	<string name="outfits">Outfits</string>
	<string name="recruit">Recruit</string>
	<string name="result">Result</string>
	<string name="right">Right</string>
	<string name="sanity">Sanity</string>
	<string name="sanity_analyzer">Sanity Analyzer</string>
	<string name="sanity_to_restore">Sanity to restore</string>
	<string name="sniper">Sniper</string>
	<string name="specialist">Specialist</string>
	<string name="supporter">Supporter</string>
	<string name="total_sanity">Total sanity</string>
	<string name="vanguard">Vanguard</string>
	<string name="zeros">0</string>
	<string name="gender">Gender</string>
	<string name="birthplace">BirthPlace</string>
	<string name="race">Race</string>
	<string name="height">Height</string>
	<string name="combat_experience">Combat Experience</string>
	<string name="infection_status">Infection Status</string>
	<string name="nation">Nation</string>
	<string name="group">Group</string>
	<string name="birthday">Birthday</string>
	<string name="basic_information">Basic Information</string>
	<string name="physical_examination">Physical Examination</string>
	<string name="strength">Strength</string>
	<string name="mobility">Mobility</string>
	<string name="endurance">Endurance</string>
	<string name="tactical_acumen">Tactical Acumen</string>
	<string name="combat_skill">Combat skill</string>
	<string name="arts_adaptability">Arts Adaptability</string>
</resources>