<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
	android:layout_width="match_parent"
	android:layout_height="match_parent"
	android:orientation="vertical"
	android:layout_marginTop="16dp"
	android:layout_marginBottom="16dp"
	android:layout_marginStart="16dp"
	android:layout_marginEnd="16dp">

	<LinearLayout
		android:layout_width="match_parent"
		android:layout_height="wrap_content">

		<ImageView
			android:id="@+id/backButton"
			android:layout_width="50dp"
			android:layout_height="50dp"
			android:layout_marginStart="6dp"
			android:layout_marginTop="6dp"
			android:layout_marginEnd="6dp"
			android:layout_marginBottom="6dp"
			android:contentDescription="@string/back"
			android:gravity="center"
			android:scaleType="fitCenter"
			android:src="@mipmap/back_button"
			android:background="@drawable/border"
			android:clipToOutline="true" />
	</LinearLayout>

	<ScrollView
		android:layout_width="match_parent"
		android:layout_height="match_parent">

		<LinearLayout
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:layout_marginStart="6dp"
			android:layout_marginTop="6dp"
			android:layout_marginEnd="6dp"
			android:layout_marginBottom="6dp"
			android:gravity="center_horizontal"
			android:orientation="vertical">

			<!--Image-->
			<FrameLayout
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:layout_gravity="center">

				<ImageView
					android:id="@+id/characterImage"
					android:layout_width="170dp"
					android:layout_height="250dp"
					android:contentDescription="@string/characters"
					android:scaleType="centerCrop"
					android:layout_marginStart="6dp"
					android:layout_marginTop="6dp"
					android:layout_marginEnd="6dp"
					android:layout_marginBottom="6dp" />
			</FrameLayout>

			<!--Name-->
			<LinearLayout
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:orientation="horizontal"
				android:layout_marginTop="6dp">
			<!--max width 300dp-->
			<TextView
				android:layout_width="150dp"
				android:layout_height="wrap_content"
				android:text="@string/Name"
				android:textSize="20sp"
				android:gravity="center"/>

			<TextView
				android:id="@+id/charactersName"
				android:layout_width="150dp"
				android:layout_height="wrap_content"
				android:text="@string/Name"
				android:textSize="20sp"
				android:gravity="center"/>
		</LinearLayout>

			<!--gender-->
			<LinearLayout
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:orientation="horizontal"
				android:layout_marginTop="2dp">
				<!--max width 300dp-->
				<TextView
					android:layout_width="150dp"
					android:layout_height="wrap_content"
					android:text="@string/gender"
					android:textSize="20sp"
					android:gravity="center"/>

				<TextView
					android:id="@+id/gender"
					android:layout_width="150dp"
					android:layout_height="wrap_content"
					android:text="@string/gender"
					android:textSize="20sp"
					android:gravity="center"/>
			</LinearLayout>

			<!--Place of Birth-->
			<LinearLayout
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:orientation="horizontal"
				android:layout_marginTop="2dp">
				<!--max width 300dp-->
				<TextView
					android:layout_width="150dp"
					android:layout_height="wrap_content"
					android:text="@string/birthplace"
					android:textSize="20sp"
					android:gravity="center"/>

				<TextView
					android:id="@+id/BirthPlace"
					android:layout_width="150dp"
					android:layout_height="wrap_content"
					android:text="@string/birthplace"
					android:textSize="20sp"
					android:gravity="center"/>
			</LinearLayout>

			<!--Race-->
			<LinearLayout
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:orientation="horizontal"
				android:layout_marginTop="2dp">
				<!--max width 300dp-->
				<TextView
					android:layout_width="150dp"
					android:layout_height="wrap_content"
					android:text="@string/race"
					android:textSize="20sp"
					android:gravity="center"/>

				<TextView
					android:id="@+id/Race"
					android:layout_width="150dp"
					android:layout_height="wrap_content"
					android:text="@string/race"
					android:textSize="20sp"
					android:gravity="center"/>
			</LinearLayout>

			<!--Height-->
			<LinearLayout
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:orientation="horizontal"
				android:layout_marginTop="2dp">
				<!--max width 300dp-->
				<TextView
					android:layout_width="150dp"
					android:layout_height="wrap_content"
					android:text="@string/height"
					android:textSize="20sp"
					android:gravity="center"/>

				<TextView
					android:id="@+id/Height"
					android:layout_width="150dp"
					android:layout_height="wrap_content"
					android:text="@string/height"
					android:textSize="20sp"
					android:gravity="center"/>
			</LinearLayout>

			<!--Combat Experience-->
			<LinearLayout
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:orientation="horizontal"
				android:layout_marginTop="2dp">
				<!--max width 300dp-->
				<TextView
					android:layout_width="150dp"
					android:layout_height="wrap_content"
					android:text="@string/combat_experience"
					android:textSize="20sp"
					android:gravity="center"/>

				<TextView
					android:id="@+id/CombatExperience"
					android:layout_width="150dp"
					android:layout_height="wrap_content"
					android:text="@string/combat_experience"
					android:textSize="20sp"
					android:gravity="center"/>
			</LinearLayout>

			<!--Infection Status-->
			<LinearLayout
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:orientation="horizontal"
				android:layout_marginTop="2dp">
				<!--max width 300dp-->
				<TextView
					android:layout_width="150dp"
					android:layout_height="wrap_content"
					android:text="@string/infection_status"
					android:textSize="20sp"
					android:gravity="center"/>

				<TextView
					android:id="@+id/InfectionStatus"
					android:layout_width="150dp"
					android:layout_height="wrap_content"
					android:text="@string/infection_status"
					android:textSize="20sp"
					android:gravity="center"/>
			</LinearLayout>

			<!--Nation-->
			<LinearLayout
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:orientation="horizontal"
				android:layout_marginTop="6dp">
				<!--max width 300dp-->
				<TextView
					android:layout_width="150dp"
					android:layout_height="wrap_content"
					android:text="@string/nation"
					android:textSize="20sp"
					android:gravity="center"/>

				<TextView
					android:id="@+id/Nation"
					android:layout_width="150dp"
					android:layout_height="wrap_content"
					android:text="@string/nation"
					android:textSize="20sp"
					android:gravity="center"/>
			</LinearLayout>

			<!--Group-->
			<LinearLayout
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:orientation="horizontal"
				android:layout_marginTop="2dp">
				<!--max width 300dp-->
				<TextView
					android:layout_width="150dp"
					android:layout_height="wrap_content"
					android:text="@string/group"
					android:textSize="20sp"
					android:gravity="center"/>

				<TextView
					android:id="@+id/Group"
					android:layout_width="150dp"
					android:layout_height="wrap_content"
					android:text="@string/group"
					android:textSize="20sp"
					android:gravity="center"/>
			</LinearLayout>

		</LinearLayout>
	</ScrollView>
</LinearLayout>