<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:app="http://schemas.android.com/apk/res-auto"
	android:layout_width="match_parent"
	android:layout_height="match_parent"
	android:orientation="vertical"
	android:gravity="center"
	android:layout_marginStart="16dp"
	android:layout_marginTop="16dp"
	android:layout_marginEnd="16dp"
	android:layout_marginBottom="16dp">

	<FrameLayout
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_gravity="center"
		android:layout_marginTop="16dp"
		android:layout_marginBottom="6dp">

		<ImageView
			android:layout_width="100dp"
			android:layout_height="100dp"
			android:contentDescription="@string/logo"
			android:src="@mipmap/sanity"
			android:layout_marginTop="6dp"
			android:layout_marginBottom="6dp"
			android:layout_marginEnd="6dp"
			android:layout_marginStart="6dp"/>
	</FrameLayout>

	<LinearLayout
		android:layout_width="match_parent"
		android:layout_height="match_parent"
		android:orientation="vertical"
		android:gravity="center_horizontal"
		android:layout_marginTop="6dp"
		android:layout_marginBottom="6dp"
		android:layout_marginStart="6dp"
		android:layout_marginEnd="6dp">

		<TextView
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:text="@string/sanity_analyzer"
			android:textSize="20sp"
			android:layout_marginTop="16dp"
			android:layout_marginBottom="26dp"/>

			<LinearLayout
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:gravity="center"
				android:orientation="vertical"
				android:layout_marginTop="6dp"
				android:layout_marginBottom="6dp">

				<LinearLayout
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:orientation="vertical"
					android:gravity="center"
					android:layout_marginTop="6dp"
					android:layout_marginBottom="6dp"
					android:layout_marginStart="6dp"
					android:layout_marginEnd="6dp">

					<TextView
						android:layout_width="wrap_content"
						android:layout_height="wrap_content"
						android:text="@string/total_sanity"
						android:textSize="20sp"
						android:layout_marginBottom="6dp"/>

					<LinearLayout
						android:layout_width="wrap_content"
						android:layout_height="wrap_content"
						android:orientation="horizontal"
						android:gravity="center">

						<EditText
							android:id="@+id/totalSanityText"
							android:layout_width="wrap_content"
							android:layout_height="wrap_content"
							android:autofillHints="0"
							android:hint="@string/zeros"
							android:inputType="number"
							android:text=""
							android:textSize="26sp"
							android:layout_marginStart="6dp"
							android:layout_marginEnd="6dp"
							android:maxLines="1"
							android:maxLength="3"
							android:digits="0123456789"/>
					</LinearLayout>
				</LinearLayout>

				<LinearLayout
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:orientation="vertical"
					android:gravity="center"
					android:layout_marginTop="6dp"
					android:layout_marginBottom="6dp"
					android:layout_marginStart="6dp"
					android:layout_marginEnd="6dp">

					<TextView
						android:layout_width="wrap_content"
						android:layout_height="wrap_content"
						android:text="@string/current_sanity"
						android:textSize="20sp"
						android:layout_marginBottom="6dp"/>

					<LinearLayout
						android:layout_width="wrap_content"
						android:layout_height="wrap_content"
						android:orientation="horizontal"
						android:gravity="center">

						<EditText
							android:id="@+id/currentSanityText"
							android:layout_width="wrap_content"
							android:layout_height="wrap_content"
							android:autofillHints="0"
							android:hint="@string/zeros"
							android:inputType="number"
							android:text=""
							android:textSize="26sp"
							android:layout_marginStart="6dp"
							android:layout_marginEnd="6dp"
							android:maxLines="1"
							android:maxLength="3"
							android:digits="0123456789"/>
					</LinearLayout>
				</LinearLayout>

				<LinearLayout
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:layout_marginTop="6dp"
					android:layout_marginBottom="6dp"
					android:layout_marginStart="6dp"
					android:layout_marginEnd="6dp">

					<Button
						android:id="@+id/analyzerButton"
						android:layout_width="wrap_content"
						android:layout_height="wrap_content"
						android:text="@string/analyzer"
						android:layout_marginStart="6dp"
						android:layout_marginEnd="6dp"
						android:layout_marginTop="6dp">
					</Button>
				</LinearLayout>

				<LinearLayout
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:layout_marginTop="6dp"
					android:layout_marginBottom="6dp"
					android:layout_marginStart="6dp"
					android:layout_marginEnd="6dp">

					<TextView
						android:id="@+id/resultTextView"
						android:layout_width="wrap_content"
						android:layout_height="wrap_content"
						android:layout_marginTop="16dp"
						android:layout_marginBottom="6dp"
						android:layout_marginStart="6dp"
						android:layout_marginEnd="6dp"
						android:text=""
						android:hint="@string/result"
						android:textSize="18sp"/>

				</LinearLayout>
		</LinearLayout>
	</LinearLayout>
</LinearLayout>