<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
	android:layout_width="match_parent"
	android:layout_height="match_parent"
	android:orientation="vertical"
	android:layout_marginTop="16dp"
	android:layout_marginBottom="16dp"
	android:layout_marginStart="16dp"
	android:layout_marginEnd="16dp">

	<!--Back button-->
	<LinearLayout
		android:layout_width="match_parent"
		android:layout_height="wrap_content">

		<ImageView
			android:id="@+id/backButton"
			android:layout_width="50dp"
			android:layout_height="50dp"
			android:layout_marginStart="6dp"
			android:layout_marginTop="6dp"
			android:layout_marginEnd="6dp"
			android:layout_marginBottom="6dp"
			android:contentDescription="@string/back"
			android:gravity="center"
			android:scaleType="fitCenter"
			android:src="@mipmap/back_button"
			android:background="@drawable/border"
			android:clipToOutline="true" />
	</LinearLayout>

	<!-- first row (Vanguard, Guard) -->
	<LinearLayout
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:gravity="center"
		android:orientation="horizontal">

		<LinearLayout
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:gravity="center"
			android:orientation="vertical">

			<ImageButton
				android:id="@+id/Vanguard"
				android:layout_width="80dp"
				android:layout_height="80dp"
				android:layout_marginStart="6dp"
				android:layout_marginTop="6dp"
				android:layout_marginEnd="6dp"
				android:background="@drawable/border"
				android:clickable="true"
				android:clipToOutline="true"
				android:contentDescription="@string/vanguard"
				android:focusable="true"
				android:gravity="center"
				android:scaleType="fitCenter"
				android:src="@mipmap/vanguard" />

			<TextView
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:layout_marginBottom="8dp"
				android:gravity="center"
				android:text="@string/vanguard"
				android:textSize="16sp" />
		</LinearLayout>

		<LinearLayout
			android:layout_width="10dp"
			android:layout_height="match_parent"/>

		<LinearLayout
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:gravity="center"
			android:orientation="vertical">

			<ImageButton
				android:id="@+id/Guard"
				android:layout_width="80dp"
				android:layout_height="80dp"
				android:layout_marginStart="6dp"
				android:layout_marginTop="6dp"
				android:layout_marginEnd="6dp"
				android:background="@drawable/border"
				android:clickable="true"
				android:clipToOutline="true"
				android:contentDescription="@string/guard"
				android:focusable="true"
				android:gravity="center"
				android:scaleType="fitCenter"
				android:src="@mipmap/guard" />

			<TextView
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:layout_marginBottom="8dp"
				android:gravity="center"
				android:text="@string/guard"
				android:textSize="16sp" />
		</LinearLayout>
	</LinearLayout>

	<!-- second row (Sniper, Caster -->
	<LinearLayout
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:layout_marginTop="6dp"
		android:gravity="center"
		android:orientation="horizontal">

		<LinearLayout
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:gravity="center"
			android:orientation="vertical">

			<ImageButton
				android:id="@+id/Sniper"
				android:layout_width="80dp"
				android:layout_height="80dp"
				android:layout_marginStart="6dp"
				android:layout_marginTop="6dp"
				android:layout_marginEnd="6dp"
				android:background="@drawable/border"
				android:clickable="true"
				android:clipToOutline="true"
				android:contentDescription="@string/sniper"
				android:focusable="true"
				android:gravity="center"
				android:scaleType="fitCenter"
				android:src="@mipmap/sniper" />

			<TextView
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:layout_marginBottom="8dp"
				android:gravity="center"
				android:text="@string/sniper"
				android:textSize="16sp" />
		</LinearLayout>

		<LinearLayout
			android:layout_width="10dp"
			android:layout_height="match_parent"/>

		<LinearLayout
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:gravity="center"
			android:orientation="vertical">

			<ImageButton
				android:id="@+id/Caster"
				android:layout_width="80dp"
				android:layout_height="80dp"
				android:layout_marginStart="6dp"
				android:layout_marginTop="6dp"
				android:layout_marginEnd="6dp"
				android:background="@drawable/border"
				android:clickable="true"
				android:clipToOutline="true"
				android:contentDescription="@string/caster"
				android:focusable="true"
				android:gravity="center"
				android:scaleType="fitCenter"
				android:src="@mipmap/caster" />

			<TextView
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:layout_marginBottom="8dp"
				android:gravity="center"
				android:text="@string/caster"
				android:textSize="16sp" />
		</LinearLayout>
	</LinearLayout>

	<!-- third row (Medic, Defender)-->
	<LinearLayout
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:layout_marginTop="6dp"
		android:gravity="center"
		android:orientation="horizontal">

		<LinearLayout
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:gravity="center"
			android:orientation="vertical">

			<ImageButton
				android:id="@+id/Medic"
				android:layout_width="80dp"
				android:layout_height="80dp"
				android:layout_marginStart="6dp"
				android:layout_marginTop="6dp"
				android:layout_marginEnd="6dp"
				android:background="@drawable/border"
				android:clickable="true"
				android:clipToOutline="true"
				android:contentDescription="@string/medic"
				android:focusable="true"
				android:gravity="center"
				android:scaleType="fitCenter"
				android:src="@mipmap/medic" />

			<TextView
				android:id="@+id/MedicText"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:layout_marginBottom="8dp"
				android:gravity="center"
				android:text="@string/medic"
				android:textSize="16sp" />
		</LinearLayout>

		<LinearLayout
			android:layout_width="10dp"
			android:layout_height="match_parent"/>

		<LinearLayout
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:gravity="center"
			android:orientation="vertical">

			<ImageButton
				android:id="@+id/Defender"
				android:layout_width="80dp"
				android:layout_height="80dp"
				android:layout_marginStart="6dp"
				android:layout_marginTop="6dp"
				android:layout_marginEnd="6dp"
				android:background="@drawable/border"
				android:clickable="true"
				android:clipToOutline="true"
				android:contentDescription="@string/defender"
				android:focusable="true"
				android:gravity="center"
				android:scaleType="fitCenter"
				android:src="@mipmap/defender" />

			<TextView
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:layout_marginBottom="8dp"
				android:gravity="center"
				android:text="@string/defender"
				android:textSize="16sp" />
		</LinearLayout>
	</LinearLayout>

	<!-- fourth row (Supporter, Specialist) -->
	<LinearLayout
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:layout_marginTop="6dp"
		android:gravity="center"
		android:orientation="horizontal">

		<LinearLayout
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:gravity="center"
			android:orientation="vertical">

			<ImageButton
				android:id="@+id/Supporter"
				android:layout_width="80dp"
				android:layout_height="80dp"
				android:layout_marginStart="6dp"
				android:layout_marginTop="6dp"
				android:layout_marginEnd="6dp"
				android:background="@drawable/border"
				android:clickable="true"
				android:clipToOutline="true"
				android:contentDescription="@string/supporter"
				android:focusable="true"
				android:gravity="center"
				android:scaleType="fitCenter"
				android:src="@mipmap/supporter" />

			<TextView
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:layout_marginBottom="8dp"
				android:gravity="center"
				android:text="@string/supporter"
				android:textSize="16sp" />
		</LinearLayout>

		<LinearLayout
			android:layout_width="10dp"
			android:layout_height="match_parent"/>

		<LinearLayout
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:gravity="center"
			android:orientation="vertical">

			<ImageButton
				android:id="@+id/Specialist"
				android:layout_width="80dp"
				android:layout_height="80dp"
				android:layout_marginStart="6dp"
				android:layout_marginTop="6dp"
				android:layout_marginEnd="6dp"
				android:background="@drawable/border"
				android:clickable="true"
				android:clipToOutline="true"
				android:contentDescription="@string/specialist"
				android:focusable="true"
				android:gravity="center"
				android:scaleType="fitCenter"
				android:src="@mipmap/specialist" />

			<TextView
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:layout_marginBottom="8dp"
				android:gravity="center"
				android:text="@string/specialist"
				android:textSize="16sp" />
		</LinearLayout>
	</LinearLayout>

</LinearLayout>