<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
	android:layout_width="match_parent"
	android:layout_height="match_parent"
	android:layout_marginStart="16dp"
	android:layout_marginTop="16dp"
	android:layout_marginEnd="16dp"
	android:layout_marginBottom="16dp"
	android:gravity="center"
	android:orientation="vertical">

	<LinearLayout
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:gravity="center"
		android:orientation="horizontal">

		<LinearLayout
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:gravity="center"
			android:orientation="vertical">

			<ImageButton
				android:id="@+id/Sanity"
				android:layout_width="80dp"
				android:layout_height="80dp"
				android:layout_marginStart="6dp"
				android:layout_marginTop="6dp"
				android:layout_marginEnd="6dp"
				android:clickable="true"
				android:contentDescription="@string/sanity"
				android:focusable="true"
				android:gravity="center"
				android:scaleType="fitCenter"
				android:src="@mipmap/sanity"
				android:background="@drawable/border_grey"
				android:clipToOutline="true" />

			<TextView
				android:id="@+id/SanityText"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:layout_marginBottom="8dp"
				android:gravity="center"
				android:text="@string/sanity"
				android:textSize="16sp" />
		</LinearLayout>

		<LinearLayout
			android:layout_width="10dp"
			android:layout_height="match_parent"/>

		<LinearLayout
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:gravity="center"
			android:orientation="vertical">

			<ImageButton
				android:id="@+id/Operators"
				android:layout_width="80dp"
				android:layout_height="80dp"
				android:layout_marginStart="6dp"
				android:layout_marginTop="6dp"
				android:layout_marginEnd="6dp"
				android:clickable="true"
				android:contentDescription="@string/operators"
				android:focusable="true"
				android:gravity="center"
				android:scaleType="fitCenter"
				android:src="@mipmap/operators"
				android:background="@drawable/border_grey"
				android:clipToOutline="true" />

			<TextView
				android:id="@+id/OperatorsText"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:layout_marginBottom="8dp"
				android:gravity="center"
				android:text="@string/operators"
				android:textSize="16sp" />
		</LinearLayout>
	</LinearLayout>

	<LinearLayout
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:layout_marginTop="6dp"
		android:gravity="center"
		android:orientation="horizontal">

		<LinearLayout
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:gravity="center"
			android:orientation="vertical">

			<ImageButton
				android:id="@+id/Materials"
				android:layout_width="80dp"
				android:layout_height="80dp"
				android:layout_marginStart="6dp"
				android:layout_marginTop="6dp"
				android:layout_marginEnd="6dp"
				android:clickable="true"
				android:contentDescription="@string/materials"
				android:focusable="true"
				android:gravity="center"
				android:scaleType="fitCenter"
				android:src="@mipmap/items"
				android:background="@drawable/border_grey"
				android:clipToOutline="true" />

			<TextView
				android:id="@+id/ItemsText"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:layout_marginBottom="8dp"
				android:gravity="center"
				android:text="@string/materials"
				android:textSize="16sp" />
		</LinearLayout>

		<LinearLayout
			android:layout_width="10dp"
			android:layout_height="match_parent"/>

		<LinearLayout
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:gravity="center"
			android:orientation="vertical">

			<ImageButton
				android:id="@+id/Outfits"
				android:layout_width="80dp"
				android:layout_height="80dp"
				android:layout_marginStart="6dp"
				android:layout_marginTop="6dp"
				android:layout_marginEnd="6dp"
				android:clickable="true"
				android:contentDescription="@string/outfits"
				android:focusable="true"
				android:gravity="center"
				android:scaleType="fitCenter"
				android:src="@mipmap/outfit"
				android:background="@drawable/border_grey"
				android:clipToOutline="true" />

			<TextView
				android:id="@+id/OutfitsText"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:layout_marginBottom="8dp"
				android:gravity="center"
				android:text="@string/outfits"
				android:textSize="16sp" />
		</LinearLayout>
	</LinearLayout>

	<LinearLayout
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:layout_marginTop="6dp"
		android:gravity="center"
		android:orientation="horizontal">

		<LinearLayout
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:gravity="center"
			android:orientation="vertical">

			<ImageButton
				android:id="@+id/Factions"
				android:layout_width="80dp"
				android:layout_height="80dp"
				android:layout_marginStart="6dp"
				android:layout_marginTop="6dp"
				android:layout_marginEnd="6dp"
				android:clickable="true"
				android:contentDescription="@string/factions"
				android:focusable="true"
				android:gravity="center"
				android:scaleType="fitCenter"
				android:src="@mipmap/faction"
				android:background="@drawable/border_grey"
				android:clipToOutline="true" />

			<TextView
				android:id="@+id/FactionsText"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:layout_marginBottom="8dp"
				android:gravity="center"
				android:text="@string/factions"
				android:textSize="16sp" />
		</LinearLayout>

		<LinearLayout
			android:layout_width="10dp"
			android:layout_height="match_parent"/>

		<LinearLayout
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:gravity="center"
			android:orientation="vertical">

			<ImageButton
				android:id="@+id/Enemies"
				android:layout_width="80dp"
				android:layout_height="80dp"
				android:layout_marginStart="6dp"
				android:layout_marginTop="6dp"
				android:layout_marginEnd="6dp"
				android:clickable="true"
				android:contentDescription="@string/enemies"
				android:focusable="true"
				android:gravity="center"
				android:scaleType="fitCenter"
				android:src="@mipmap/enemy"
				android:background="@drawable/border_grey"
				android:clipToOutline="true" />

			<TextView
				android:id="@+id/EnemiesText"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:layout_marginBottom="8dp"
				android:gravity="center"
				android:text="@string/enemies"
				android:textSize="16sp" />
		</LinearLayout>
	</LinearLayout>

	<LinearLayout
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:layout_marginTop="6dp"
		android:gravity="center"
		android:orientation="horizontal">

		<LinearLayout
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:gravity="center"
			android:orientation="vertical">

			<ImageButton
				android:id="@+id/Recruit"
				android:layout_width="80dp"
				android:layout_height="80dp"
				android:layout_marginStart="6dp"
				android:layout_marginTop="6dp"
				android:layout_marginEnd="6dp"
				android:clickable="true"
				android:contentDescription="@string/recruit"
				android:focusable="true"
				android:gravity="center"
				android:scaleType="fitCenter"
				android:src="@mipmap/recruit"
				android:background="@drawable/border_grey"
				android:clipToOutline="true" />

			<TextView
				android:id="@+id/RecruitText"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:layout_marginBottom="8dp"
				android:gravity="center"
				android:text="@string/recruit"
				android:textSize="16sp" />
		</LinearLayout>

		<LinearLayout
			android:layout_width="10dp"
			android:layout_height="match_parent"/>

		<LinearLayout
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:gravity="center"
			android:orientation="vertical">

			<ImageButton
				android:id="@+id/Headhunt"
				android:layout_width="80dp"
				android:layout_height="80dp"
				android:layout_marginStart="6dp"
				android:layout_marginTop="6dp"
				android:layout_marginEnd="6dp"
				android:clickable="true"
				android:contentDescription="@string/headhunt"
				android:focusable="true"
				android:gravity="center"
				android:scaleType="fitCenter"
				android:src="@mipmap/headhunt"
				android:background="@drawable/border_grey"
				android:clipToOutline="true" />

			<TextView
				android:id="@+id/HeadhuntText"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:layout_marginBottom="8dp"
				android:gravity="center"
				android:text="@string/headhunt"
				android:textSize="16sp" />
		</LinearLayout>
	</LinearLayout>


</LinearLayout>